--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
     <h1>
       Hello world
     </h1>
+    <img src="https://cdn.pixabay.com/photo/2014/12/08/11/49/love-560783_1280.jpg">
   </body>
 </html>
