--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
       Hello world
     </h1>
     <ul>
-      <li>fb</li>
-      <li>beebom</li>
+      <li><a href="https://www.facebook.com/"></a>fb</li>
+      <li><a href="https://www.beebom.com/"></a>beebom</li>
     </ul>
     <img src="https://cdn.pixabay.com/photo/2014/12/08/11/49/love-560783_1280.jpg">
   </body>
