--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
       <li><a href="https://www.facebook.com/"></a>fb</li>
       <li><a href="https://www.beebom.com/"></a>beebom</li>
       <li><button onclick="getLocation()">Locate</button></li>
+      <li><p id="demo"></p></li>
     </ul>
     <img src="https://cdn.pixabay.com/photo/2014/12/08/11/49/love-560783_1280.jpg">
+    
     <script>
   var x = document.getElementById("demo");
 
