--- a/index.html
+++ b/index.html
@@ -7,14 +7,11 @@
    <!-- <link rel="stylesheet" href="style.css"> -->
   </head>
   <body>
-    <div id="top">
-      
-    </div>
-    <!--Hello there, awesome person!
+    Hello there, awesome person!
     <ul>
       <li><button onclick="getLocation()">Locate</button></li>
     </ul>    
-   <! <script>
+    <script>
   var x = document.getElementById("demo");
     function getLocation() {
     if (navigator.geolocation) {
@@ -27,6 +24,6 @@
     x.innerHTML = "Latitude: " + position.coords.latitude + 
     "<br>Longitude: " + position.coords.longitude;
     }
-</script>-->
+</script>
   </body>
 </html>
